add user's roles
