# api_metacritic_game/routers/criticsUsersRouter.js
@@ -4,10 +4,10 @@ const express = require('express'),
     authMiddleware = require('../middlewares/authMiddleware');
 
 
-router.get('/', criticsUsersController.getCriticsUsers);
-router.post('/', authMiddleware, criticsUsersController.addCriticsUser);
-router.put('/', authMiddleware, criticsUsersController.putCriticsUser);
-router.get('/:idU/:idR', criticsUsersController.getCriticsUserById);
-router.delete('/:idU/:idR', authMiddleware, criticsUsersController.deleteCriticsUserById);
+router.get('/', criticsUsersController.getCriticsUsers); // tout le monde peut accéder aux critiques des utilisateurs sur les reviews
+router.post('/', authMiddleware("gamer"), criticsUsersController.addCriticsUser); //seul les utilisateurs ayant pour rôle "gamer" peuvent ajouter une critiuqe sur une review
+router.put('/', authMiddleware("gamer"), criticsUsersController.putCriticsUser); // seul les utilisateurs ayant pour rôle "gamer" peuvent modifier leur critique
+router.get('/:idUser/:idReview', criticsUsersController.getCriticsUserById); // tout le monde peut accéder aux critiques des "gamer" sur les reviews
+router.delete('/:idUser/:idReview', authMiddleware("gamer"), criticsUsersController.deleteCriticsUserById); // seul l'utilisateur ayant pour rôle "gamer" peut supprimer ses critiques
 
 module.exports = router;
